fixed overflow issue

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -27,7 +27,7 @@ header{
             content:'';
             top:0;
             left:0;
-            width:100vw;
+            width:100%;
             height:100%;
             background-color:rgba($color:$offWhite, $alpha:0.7);
         }
