--- a/styles/styles.css
+++ b/styles/styles.css
@@ -476,7 +476,7 @@ header .headerRight::before {
   content: "";
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   background-color: rgba(250, 250, 250, 0.7);
 }
